--- a/src/css/base.css
+++ b/src/css/base.css
@@ -61,6 +61,7 @@ a:visited {
 img {
   display: block;
   width: 100%;
+  border: none;
 }
 .i-block {
   display: inline-block;
@@ -181,6 +182,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 9;
 }
 .navbar-right {
   float: right;
@@ -194,38 +196,46 @@ img {
   margin-right: 40px;
   z-index: 9;
 }
-.nav li a {
+.nav li {
   display: inline-block;
   position: relative;
 }
-.nav li a span {
+.nav li a {
   display: inline-block;
 }
-.transition(all 0.5s) .nav li a span.eng {
+.nav li span {
+  display: inline-block;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.nav li span.eng {
   font-family: Helvetica;
 }
-.nav li a span.chinese {
+.nav li span.chinese {
   position: absolute;
   z-index: -1;
   top: 0;
   left: 0;
   opacity: 0;
   white-space: nowrap;
-  -webkit-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-90deg);
+  -moz-transform: rotateY(-90deg);
+  -o-transform: rotateY(-90deg);
+  -ms-transform: rotateY(-90deg);
+  transform: rotateY(-90deg);
 }
-.nav li.active .eng {
+.nav li.hover .eng {
   opacity: 0;
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  transform: rotateY(180deg);
+  -webkit-transform: rotateY(90deg);
+  -moz-transform: rotateY(90deg);
+  -o-transform: rotateY(90deg);
+  -ms-transform: rotateY(90deg);
+  transform: rotateY(90deg);
 }
-.nav li.active .chinese {
+.nav li.hover .chinese {
   opacity: 1;
   -webkit-transform: rotateY(0);
   -moz-transform: rotateY(0);
@@ -233,3 +243,88 @@ img {
   -ms-transform: rotateY(0);
   transform: rotateY(0);
 }
+/*slide*/
+.flexslider {
+  margin: 0px auto 20px;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  zoom: 1;
+}
+.flexslider .slides li {
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -ms-transition: all 1s;
+  transition: all 1s;
+}
+.flexslider .slides li a {
+  display: block;
+}
+.flex-direction-nav a {
+  width: 70px;
+  height: 70px;
+  line-height: 99em;
+  overflow: hidden;
+  margin: -35px 0 0;
+  display: block;
+  background: url(../images/ad_ctr.png) no-repeat;
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: all .3s ease;
+  border-radius: 35px;
+}
+.flex-direction-nav .flex-next {
+  background-position: 0 -70px;
+  right: 0;
+}
+.flex-direction-nav .flex-prev {
+  left: 0;
+}
+.flexslider:hover .flex-next {
+  opacity: 0.8;
+  filter: alpha(opacity=25);
+}
+.flexslider:hover .flex-prev {
+  opacity: 0.8;
+  filter: alpha(opacity=25);
+}
+.flexslider:hover .flex-next:hover,
+.flexslider:hover .flex-prev:hover {
+  opacity: 1;
+  filter: alpha(opacity=50);
+}
+.flex-control-nav {
+  width: 100%;
+  position: absolute;
+  bottom: 10px;
+  text-align: center;
+}
+.flex-control-nav li {
+  margin: 0 2px;
+  display: inline-block;
+  zoom: 1;
+  *display: inline;
+}
+.flex-control-paging li a {
+  background: url(../images/dot.png) no-repeat 0 -16px;
+  display: block;
+  height: 16px;
+  overflow: hidden;
+  text-indent: -99em;
+  width: 16px;
+  cursor: pointer;
+}
+.flex-control-paging li a.flex-active,
+.flex-control-paging li.active a {
+  background-position: 0 0;
+}
+.flexslider .slides a img {
+  width: 100%;
+  display: block;
+}
+/*end*/
