--- a/views/about.html
+++ b/views/about.html
@@ -10,3 +10,10 @@
         <li ng-repeat="item in banners track by $index" banner-init><a>{{$index}}</a></li>
     </ol>
 </div>
+<div class="about-container">
+    <div class="about-content">
+        <div class="filter-item mb30"><img src='../src/images/filter1.png'><img class="filter" src='../src/images/filter1.png'><img class="filter-des" src="../src/images/filter-des1.png" alt="introduction"></div>
+        <div class="filter-item mb30"><img src='../src/images/filter1.png'><img class="filter" src='../src/images/filter2.png'><img class="filter-des" src="../src/images/filter-des2.png" alt="introduction"></div>
+        <div class="filter-item mb30"><img src='../src/images/filter1.png'><img class="filter" src='../src/images/filter3.png'><img class="filter-des" src="../src/images/filter-des3.png" alt="introduction"></div>
+    </div>
+</div>
