--- a/src/css/response.css
+++ b/src/css/response.css
@@ -7,6 +7,9 @@
   .nav li {
     margin-right: 20px;
   }
+  .headline img {
+    width: 350px;
+  }
 }
 @media screen and (max-width: 992px) {
   .collapse {
@@ -63,5 +66,47 @@
   }
   .navbar-brand {
     width: 200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .headline img {
+    width: 250px;
+  }
+  .works-banner {
+    margin-bottom: 50px;
+  }
+  .headline {
+    padding-bottom: 25px;
+  }
+  .mt90 {
+    margin-top: 40px;
+  }
+  .close-panel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 40px;
+    width: 100%;
+    opacity: 0.7;
+    background: #000;
+    z-index: 9;
+  }
+  .modal-container .close {
+    top: 0;
+    right: 20px;
+  }
+  .work-modal {
+    padding: 0;
+  }
+  .modal-content {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  .headline img {
+    width: 150px;
+  }
+  .content {
+    padding: 0 10px;
   }
 }
