--- a/src/less/base.less
+++ b/src/less/base.less
@@ -77,7 +77,18 @@ img {
 .i-block {
     display: inline-block;
 }
-
+.mt10{margin-top:10px}
+.mt20{margin-top:20px}
+.mt30{margin-top:30px}
+.mb10{margin-top:10px}
+.mb20{margin-top:20px}
+.mb30{margin-top:30px}
+.ml10{margin-top:10px}
+.ml20{margin-top:20px}
+.ml30{margin-top:30px}
+.mr10{margin-top:10px}
+.mr20{margin-top:20px}
+.mr30{margin-top:30px}
 .center {
     display: -webkit-box;
     -webkit-box-align: center;
@@ -363,4 +374,116 @@ img {
         display: block;
     }
     .collapse-btn{display: none}
+/*end*/
+/*works*/
+.works-banner{margin-bottom:100px}
+.content{
+	max-width: 1540px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+.headline{padding-bottom:55px;border-bottom:3px solid #888888;}
+.headline img{width:524px}
+.mt90{margin-top:90px}
+.works-list ul{margin-left:-3%}
+.works-list ul li{float:left;width:47%;margin-left:3%;margin-bottom:30px}
+.works-img{display:block;position:relative;overflow: hidden;cursor:pointer}
+.works-img span{
+	display: block;
+	position:absolute;
+	top:0;left:0;
+	width:100%;
+	height:100%;
+	background:#000;
+	opacity:0.6;
+	filter:alpha(opacity=60);
+	.transition(all 0.5s);
+}
+.works-des span{display: block;font-size:14px;line-height: 24px}
+.works-des .company-name{font-size:16px;line-height: 40px}
+.b-b{border-bottom:1px solid #888888}
+.works-list ul li.hover{
+	.works-img span{
+		.transform(translateY(101%));
+	}
+}
+.pagination ul li{
+	display:inline-block;
+	font-size:16px;
+	font-family: Arial
+}
+/*end*/
+/*about*/
+.about-container{
+	max-width: 1700px;
+	padding:0 50px;	
+	margin:0 auto;
+}
+.filter-item{position:relative;}
+.filter{position:absolute;top:0;left:0;width:100%;height:100%;}
+.filter-des{
+	position:absolute;width:100%;height:100%;top:0;left:0
+}
+/*end*/
+.footer{
+	padding:50px;
+    p{font-size:14px}
+}
+/*workModal*/
+.work-modal{
+	position:fixed;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	padding-top:40px;
+	padding-bottom:40px;
+	z-index:-1;
+	overflow: auto;
+	opacity:0;
+	
+}
+.work-modal.active{
+	z-index:9;
+	opacity:1;
+}
+.work-modal .bg{
+	position:fixed;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	background:#333;
+	opacity:0;
+	filter:alpha(opacity=0);
+	z-index:-1;
+}
+.work-modal.active .bg{
+	opacity:0.7;
+	filter:alpha(opacity=70);
+	.transition(all 1s);
+}
+.modal-content{
+	max-width:1120px;
+	padding:0 10px;
+	margin:0 auto;
+	opacity:0;
+	filter:alpha(opacity=0);
+}
+.work-modal.active .modal-content{
+	opacity:1;
+	filter:alpha(opacity=100);
+	.transition(all 1s ease 1s);
+}
+.modal-container .close{
+	position:fixed;
+	top:3%;
+	right:3%;
+	width:40px;
+	height:40px;
+	background:url(../images/close-icon.png);
+	background-size:cover;
+	cursor:pointer;
+}
+
 /*end*/
