--- a/views/works.html
+++ b/views/works.html
@@ -1,1 +1,19 @@
-<p>works</p>
+<div class="works-banner"><img src="../src/images/works-banner.png"></div>
+<div class="content">
+    <div class="headline"><img src="../src/images/works-head.png"></div>
+    <div class="works-list mt90">
+        <ul class="clearfix">
+            <li ng-repeat="work in works.list track by $index" active-hover>
+                <a class="works-img" work-show>
+                    <img src="{{work.imgUrl}}" />
+                    <span></span>
+                </a>
+                <p class="works-des">
+                    <span class="b-b company-name">{{work.companyName}}</span>
+                    <span>{{work.workDes}}</span>
+                </p>
+            </li>
+        </ul>
+    </div>
+</div>
+<work-modal/>
