--- a/src/css/base.css
+++ b/src/css/base.css
@@ -454,6 +454,13 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -ms-transition: all 1s;
+  transition: all 1s;
 }
 .filter-des {
   position: absolute;
@@ -461,6 +468,10 @@ img {
   height: 100%;
   top: 0;
   left: 0;
+}
+.filter-item.hover .filter {
+  opacity: 0.7;
+  filter: alpha(opacity=70);
 }
 /*end*/
 .footer {
@@ -522,14 +533,26 @@ img {
   -ms-transition: all 1s ease 1s;
   transition: all 1s ease 1s;
 }
+.close-panel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 40px;
+  width: 100%;
+  opacity: 0.7;
+  background: #000;
+  z-index: 9;
+}
 .modal-container .close {
   position: fixed;
-  top: 3%;
-  right: 3%;
+  top: 0;
+  right: 20px;
   width: 40px;
   height: 40px;
   background: url(../images/close-icon.png);
   background-size: cover;
   cursor: pointer;
 }
+/*end*/
+/*news*/
 /*end*/
