--- a/src/less/base.less
+++ b/src/less/base.less
@@ -71,24 +71,61 @@ a:visited {
 img {
     display: block;
     width: 100%;
-    border:none;
+    border: none;
 }
 
 .i-block {
     display: inline-block;
 }
-.mt10{margin-top:10px}
-.mt20{margin-top:20px}
-.mt30{margin-top:30px}
-.mb10{margin-top:10px}
-.mb20{margin-top:20px}
-.mb30{margin-top:30px}
-.ml10{margin-top:10px}
-.ml20{margin-top:20px}
-.ml30{margin-top:30px}
-.mr10{margin-top:10px}
-.mr20{margin-top:20px}
-.mr30{margin-top:30px}
+
+.mt10 {
+    margin-top: 10px
+}
+
+.mt20 {
+    margin-top: 20px
+}
+
+.mt30 {
+    margin-top: 30px
+}
+
+.mb10 {
+    margin-top: 10px
+}
+
+.mb20 {
+    margin-top: 20px
+}
+
+.mb30 {
+    margin-top: 30px
+}
+
+.ml10 {
+    margin-top: 10px
+}
+
+.ml20 {
+    margin-top: 20px
+}
+
+.ml30 {
+    margin-top: 30px
+}
+
+.mr10 {
+    margin-top: 10px
+}
+
+.mr20 {
+    margin-top: 20px
+}
+
+.mr30 {
+    margin-top: 30px
+}
+
 .center {
     display: -webkit-box;
     -webkit-box-align: center;
@@ -199,22 +236,29 @@ img {
 .no-m {
     margin: 0!important
 }
+
+
 /*less*/
-.transform(@css){
-	-webkit-transform:@css;
-	-moz-transform:@css;
-	-o-transform:@css;
-	-ms-transform:@css;
-	transform:@css;
+
+.transform(@css) {
+    -webkit-transform: @css;
+    -moz-transform: @css;
+    -o-transform: @css;
+    -ms-transform: @css;
+    transform: @css;
 }
-.transition(@css){
-	-webkit-transition:@css;
-	-moz-transition:@css;
-	-o-transition:@css;
-	-ms-transition:@css;
-	transition:@css;
+
+.transition(@css) {
+    -webkit-transition: @css;
+    -moz-transition: @css;
+    -o-transition: @css;
+    -ms-transition: @css;
+    transition: @css;
 }
+
+
 /*end*/
+
 .wrapper {
     min-height: 100%
 }
@@ -234,7 +278,7 @@ img {
     top: 0;
     left: 0;
     width: 100%;
-    z-index:9;
+    z-index: 9;
 }
 
 .navbar-right {
@@ -249,11 +293,14 @@ img {
     float: left;
     font-size: 20px;
     margin-right: 40px;
-    z-index:9;
+    z-index: 9;
 }
 
 .nav li {
-    a{position: relative;display:inline-block;}
+    a {
+        position: relative;
+        display: inline-block;
+    }
     span {
         display: inline-block;
         .transition(all 0.5s);
@@ -262,228 +309,335 @@ img {
         }
         &.chinese {
             position: absolute;
-            z-index:-1;
+            z-index: -1;
             top: 0;
             left: 0;
-            opacity:0;
+            opacity: 0;
             white-space: nowrap;
             .transform(rotateY(-90deg))
         }
     }
-
 }
-.nav li.hover{
-	.eng{
-		opacity:0;
-        .transform(rotateY(90deg))
-	}
-	.chinese{
-		opacity:1;
-        .transform(rotateY(0));
-        z-index:1;
-	}
-}
-/*slide*/
-    .flexslider {
-        margin: 0px auto 20px;
-        position: relative;
-        width: 100%;
-        overflow: hidden;
-        zoom: 1;
-    }
 
-    .flexslider .slides li {
-        .transition(all 1s);
-        a{display: block}
-    }
-    
-    .flex-direction-nav a {
-        width: 70px;
-        height: 70px;
-        line-height: 99em;
-        overflow: hidden;
-        margin: -35px 0 0;
-        display: block;
-        background: url(../images/ad_ctr.png) no-repeat;
-        position: absolute;
-        top: 50%;
-        z-index: 10;
-        cursor: pointer;
+.nav li.hover {
+    .eng {
         opacity: 0;
-        filter: alpha(opacity=0);
-        -webkit-transition: all .3s ease;
-        border-radius: 35px;
+        .transform(rotateY(90deg))
     }
-    
-    .flex-direction-nav .flex-next {
-        background-position: 0 -70px;
-        right: 0;
-    }
-    
-    .flex-direction-nav .flex-prev {
-        left: 0;
-    }
-    
-    .flexslider:hover .flex-next {
-        opacity: 0.8;
-        filter: alpha(opacity=25);
-    }
-    
-    .flexslider:hover .flex-prev {
-        opacity: 0.8;
-        filter: alpha(opacity=25);
-    }
-    
-    .flexslider:hover .flex-next:hover,
-    .flexslider:hover .flex-prev:hover {
+    .chinese {
         opacity: 1;
-        filter: alpha(opacity=50);
+        .transform(rotateY(0));
+        z-index: 1;
     }
-    
-    .flex-control-nav {
-        width: 100%;
-        position: absolute;
-        bottom: 10px;
-        text-align: center;
+}
+
+
+/*slide*/
+
+.flexslider {
+    margin: 0px auto 20px;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    zoom: 1;
+}
+
+.flexslider .slides li {
+    .transition(all 1s);
+    a {
+        display: block
     }
-    
-    .flex-control-nav li {
-        margin: 0 2px;
-        display: inline-block;
-        zoom: 1;
-        *display: inline;
-    }
-    
-    .flex-control-paging li a {
-        background: url(../images/dot.png) no-repeat 0 -16px;
-        display: block;
-        height: 16px;
-        overflow: hidden;
-        text-indent: -99em;
-        width: 16px;
-        cursor: pointer;
-    }
-    
-    .flex-control-paging li a.flex-active,
-    .flex-control-paging li.active a {
-        background-position: 0 0;
-    }
-    
-    .flexslider .slides a img {
-        width: 100%;
-        display: block;
-    }
-    .collapse-btn{display: none}
+}
+
+.flex-direction-nav a {
+    width: 70px;
+    height: 70px;
+    line-height: 99em;
+    overflow: hidden;
+    margin: -35px 0 0;
+    display: block;
+    background: url(../images/ad_ctr.png) no-repeat;
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -webkit-transition: all .3s ease;
+    border-radius: 35px;
+}
+
+.flex-direction-nav .flex-next {
+    background-position: 0 -70px;
+    right: 0;
+}
+
+.flex-direction-nav .flex-prev {
+    left: 0;
+}
+
+.flexslider:hover .flex-next {
+    opacity: 0.8;
+    filter: alpha(opacity=25);
+}
+
+.flexslider:hover .flex-prev {
+    opacity: 0.8;
+    filter: alpha(opacity=25);
+}
+
+.flexslider:hover .flex-next:hover,
+.flexslider:hover .flex-prev:hover {
+    opacity: 1;
+    filter: alpha(opacity=50);
+}
+
+.flex-control-nav {
+    width: 100%;
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+}
+
+.flex-control-nav li {
+    margin: 0 2px;
+    display: inline-block;
+    zoom: 1;
+    *display: inline;
+}
+
+.flex-control-paging li a {
+    background: url(../images/dot.png) no-repeat 0 -16px;
+    display: block;
+    height: 16px;
+    overflow: hidden;
+    text-indent: -99em;
+    width: 16px;
+    cursor: pointer;
+}
+
+.flex-control-paging li a.flex-active,
+.flex-control-paging li.active a {
+    background-position: 0 0;
+}
+
+.flexslider .slides a img {
+    width: 100%;
+    display: block;
+}
+
+.collapse-btn {
+    display: none
+}
+
+
 /*end*/
+
+
 /*works*/
-.works-banner{margin-bottom:100px}
-.content{
-	max-width: 1540px;
+
+.works-banner {
+    margin-bottom: 100px
+}
+
+.content {
+    max-width: 1540px;
     margin: 0 auto;
     padding: 0 50px;
 }
-.headline{padding-bottom:55px;border-bottom:3px solid #888888;}
-.headline img{width:524px}
-.mt90{margin-top:90px}
-.works-list ul{margin-left:-3%}
-.works-list ul li{float:left;width:47%;margin-left:3%;margin-bottom:30px}
-.works-img{display:block;position:relative;overflow: hidden;cursor:pointer}
-.works-img span{
-	display: block;
-	position:absolute;
-	top:0;left:0;
-	width:100%;
-	height:100%;
-	background:#000;
-	opacity:0.6;
-	filter:alpha(opacity=60);
-	.transition(all 0.5s);
+
+.headline {
+    padding-bottom: 55px;
+    border-bottom: 3px solid #888888;
 }
-.works-des span{display: block;font-size:14px;line-height: 24px}
-.works-des .company-name{font-size:16px;line-height: 40px}
-.b-b{border-bottom:1px solid #888888}
-.works-list ul li.hover{
-	.works-img span{
-		.transform(translateY(101%));
-	}
+
+.headline img {
+    width: 524px
 }
-.pagination ul li{
-	display:inline-block;
-	font-size:16px;
-	font-family: Arial
+
+.mt90 {
+    margin-top: 90px
 }
+
+.works-list ul {
+    margin-left: -3%
+}
+
+.works-list ul li {
+    float: left;
+    width: 47%;
+    margin-left: 3%;
+    margin-bottom: 30px
+}
+
+.works-img {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer
+}
+
+.works-img span {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+    .transition(all 0.5s);
+}
+
+.works-des span {
+    display: block;
+    font-size: 14px;
+    line-height: 24px
+}
+
+.works-des .company-name {
+    font-size: 16px;
+    line-height: 40px
+}
+
+.b-b {
+    border-bottom: 1px solid #888888
+}
+
+.works-list ul li.hover {
+    .works-img span {
+        .transform(translateY(101%));
+    }
+}
+
+.pagination ul li {
+    display: inline-block;
+    font-size: 16px;
+    font-family: Arial
+}
+
+
 /*end*/
+
+
 /*about*/
-.about-container{
-	max-width: 1700px;
-	padding:0 50px;	
-	margin:0 auto;
+
+.about-container {
+    max-width: 1700px;
+    padding: 0 50px;
+    margin: 0 auto;
 }
-.filter-item{position:relative;}
-.filter{position:absolute;top:0;left:0;width:100%;height:100%;}
-.filter-des{
-	position:absolute;width:100%;height:100%;top:0;left:0
+
+.filter-item {
+    position: relative;
+}
+
+.filter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    .transition(all 1s);
+}
+
+.filter-des {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0
+}
+
+.filter-item.hover .filter{
+    opacity: 0.7;
+    filter: alpha(opacity=70)
+}
+
+
+/*end*/
+
+.footer {
+    padding: 50px;
+    p {
+        font-size: 14px
+    }
+}
+
+
+/*workModal*/
+
+.work-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    z-index: -1;
+    overflow: auto;
+    opacity: 0;
+}
+
+.work-modal.active {
+    z-index: 9;
+    opacity: 1;
+}
+
+.work-modal .bg {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #333;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    z-index: -1;
+}
+
+.work-modal.active .bg {
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+    .transition(all 1s);
+}
+
+.modal-content {
+    max-width: 1120px;
+    padding: 0 10px;
+    margin: 0 auto;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+.work-modal.active .modal-content {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    .transition(all 1s ease 1s);
+}
+    .close-panel{
+        position:fixed;
+        top:0;left:0;
+        height: 40px;
+        width: 100%;       
+        opacity:0.7;
+        background: #000;
+        z-index:9
+    }
+.modal-container .close {
+    position: fixed;
+    top:0;right:20px;
+    width: 40px;
+    height: 40px;
+    background: url(../images/close-icon.png);
+    background-size: cover;
+    cursor: pointer;
 }
 /*end*/
-.footer{
-	padding:50px;
-    p{font-size:14px}
-}
-/*workModal*/
-.work-modal{
-	position:fixed;
-	top:0;
-	left:0;
-	right:0;
-	bottom:0;
-	padding-top:40px;
-	padding-bottom:40px;
-	z-index:-1;
-	overflow: auto;
-	opacity:0;
-	
-}
-.work-modal.active{
-	z-index:9;
-	opacity:1;
-}
-.work-modal .bg{
-	position:fixed;
-	width:100%;
-	height:100%;
-	top:0;
-	left:0;
-	background:#333;
-	opacity:0;
-	filter:alpha(opacity=0);
-	z-index:-1;
-}
-.work-modal.active .bg{
-	opacity:0.7;
-	filter:alpha(opacity=70);
-	.transition(all 1s);
-}
-.modal-content{
-	max-width:1120px;
-	padding:0 10px;
-	margin:0 auto;
-	opacity:0;
-	filter:alpha(opacity=0);
-}
-.work-modal.active .modal-content{
-	opacity:1;
-	filter:alpha(opacity=100);
-	.transition(all 1s ease 1s);
-}
-.modal-container .close{
-	position:fixed;
-	top:3%;
-	right:3%;
-	width:40px;
-	height:40px;
-	background:url(../images/close-icon.png);
-	background-size:cover;
-	cursor:pointer;
-}
+/*news*/
 
 /*end*/
