--- a/views/about.html
+++ b/views/about.html
@@ -12,8 +12,6 @@
 </div>
 <div class="about-container">
     <div class="about-content">
-        <div class="filter-item mb30"><img src='../src/images/filter1.png'><img class="filter" src='../src/images/filter1.png'><img class="filter-des" src="../src/images/filter-des1.png" alt="introduction"></div>
-        <div class="filter-item mb30"><img src='../src/images/filter1.png'><img class="filter" src='../src/images/filter2.png'><img class="filter-des" src="../src/images/filter-des2.png" alt="introduction"></div>
-        <div class="filter-item mb30"><img src='../src/images/filter1.png'><img class="filter" src='../src/images/filter3.png'><img class="filter-des" src="../src/images/filter-des3.png" alt="introduction"></div>
+        <div class="filter-item mb30" ng-repeat="item in filters track by $index" active-hover><img src={{item.imgUrl}}><img class="filter" src="../src/images/filter{{$index+1}}.png"><img class="filter-des" src="../src/images/filter-des{{$index+1}}.png" alt="introduction"></div>
     </div>
 </div>
