--- a/src/css/base.css
+++ b/src/css/base.css
@@ -102,6 +102,12 @@ img {
 .mr30 {
   margin-top: 30px;
 }
+.fl {
+  float: left;
+}
+.fr {
+  float: right;
+}
 .center {
   display: -webkit-box;
   -webkit-box-align: center;
@@ -555,4 +561,19 @@ img {
 }
 /*end*/
 /*news*/
+.mt150 {
+  margin-top: 150px;
+}
+.news-container {
+  width: 70%;
+}
+.news-list {
+  width: 30%;
+}
+.news-list ul li {
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 /*end*/
