--- a/src/less/response.less
+++ b/src/less/response.less
@@ -123,7 +123,7 @@
         height:auto;
     }
     .fs-culture-item{width:100%;float:none;margin-left:0}
-
+.fs-culture-content{margin-left:0}
 }
 
 @media screen and (max-width:480px) {
